--- a/src/app/cpmHelpers/html/cpmGridTable.html
+++ b/src/app/cpmHelpers/html/cpmGridTable.html
@@ -3,7 +3,7 @@
 <table mat-table [dataSource]="dataSourceToCpmGridTable" style="width: 100%;" class="mat-elevation-z4" > 
 
     <ng-container *ngFor="let headerObj of headersToCpmGridTable" [matColumnDef]="headerObj.ColumnDef">
-        <th mat-header-cell *matHeaderCellDef><b style="color:  rgb(27, 87, 128);font-size: small;">{{headerObj.Header}}</b></th>
+        <th mat-header-cell *matHeaderCellDef><b style="color:  rgb(27, 87, 128);font-size: small;">{{headerObj.header}}</b></th>
         <td mat-cell *matCellDef="let rowObject">{{headerObj.cellFunction(rowObject)}}</td>
     </ng-container> 
 <!-- Here "*" means template_reference just like #id =>  *matColumnDef="actions" means actions is in .ts file. So, just use matColumnDef="actions"   -->
@@ -14,24 +14,12 @@
                 <mat-icon class="material-icons" >more_horiz</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-                <span *ngFor="let key of matIcons.keys()" >
-                    <button mat-menu-item>
-                        <mat-icon>{{matIcons.get(key)}}</mat-icon>
+                <span *ngFor="let key of filteredActions(row)" >
+                    <button mat-menu-item  matTooltip={{actionIconTooltip.get(key)}} (click)="onActionClick(key, row)">
+                        <mat-icon >{{actionIcons.get(key)}}</mat-icon>
                     </button>
                 </span>
-                
-                <!-- <button mat-menu-item disabled>
-                  <mat-icon>voicemail</mat-icon>
-                  <span>Check voice mail</span>
-                </button>
-                <button mat-menu-item>
-                  <mat-icon>notifications_off</mat-icon>
-                  <span>Disable alerts</span>
-                </button> -->
-              </mat-menu>
-
-
-
+            </mat-menu>
         </td>
     </ng-container>
 
